After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755724 - Atspi adaptors for text value and table cell fixes
Atspi adaptors for text value and table cell fixes
Status: RESOLVED FIXED
Product: at-spi
Classification: Platform
Component: at-spi2-atk
unspecified
Other Linux
: Normal normal
: ---
Assigned To: At-spi maintainer(s)
At-spi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-09-28 11:47 UTC by Patryk Kaczmarek
Modified: 2015-10-13 00:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Adaptor Fixes (5.77 KB, patch)
2015-09-28 11:47 UTC, Patryk Kaczmarek
committed Details | Review

Description Patryk Kaczmarek 2015-09-28 11:47:38 UTC
Created attachment 312277 [details] [review]
Adaptor Fixes

Hello all,

I want to propose patch which resolve some problems with atk-adaptors.

1) Proper iterator usage in impl_get_Table
2) Fixed dbus_message for impl_GetAttributeValue in Text interface to match documentation and interface construction in at-spi2-core
3) Fixed value adaptor, for new approach with AtkRange structs.

Regarding point 3, I am not sure if I propose correct solution, maybe you had plans for introduce something like AtspiRange and setup new interface in adaptor for that, please let me know which solution is better for you.

Best Regards,

Patryk Kaczmarek
Comment 1 Mike Gorse 2015-10-13 00:30:10 UTC
Comment on attachment 312277 [details] [review]
Adaptor Fixes

master: a084e0
gnome-3-18: 283d69

Thanks for the patch.