Text, Value and Table Cell adaptors fixed

https://bugzilla.gnome.org/show_bug.cgi?id=755724